# ciggy-buddy

./: Cargo.toml  Dioxus.toml  README.md  commands.txt  todo.txt
assets/styling/: cigarette_button.css  cigarette_counter.css  main.css  time_period.css
scripts/: 2_copy_icons_to_mipmap.sh  3_disable_adaptive_icons.sh  enable_adaptive_icons.sh  rebuild_and_install.sh  resize_icons.sh
src/: database.rs  main.rs  synth_data.rs
src/components/: cigarette_button.rs  cigarette_counter.rs  mod.rs  time_period.rs
src/storage/: mod.rs  models.rs  storage.rs  time_utils.rs
src/views/: home.rs
