[package]
name = "ciggy-buddy"
version = "0.1.0"
authors = ["Kenneth Smith"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
dirs = "6.0.0"
lucide-dioxus = "1.1.0"
once_cell = "1.20.2"
rusqlite = "0.33.0"

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
