[package]
name = "ciggy-buddy"
version = "0.1.0"
authors = ["Kenneth Smith"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android-activity = "0.6.0"
chrono = { version = "0.4.39", features = ["serde"] }
dioxus = { version = "0.6.0", features = [] }
directories = "6.0.0"
lucide-dioxus = "1.1.0"
parking_lot = "0.12.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
